# rag-devops-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CASE_STUDY.md  Dockerfile  LICENSE  PREP.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: generator.py  main.py  metrics.py  middleware.py  models.py  retriever.py
eval/: benchmark.json  run_eval.py
ingest/: chunker.py  crawler.py  embedder.py  indexer.py  pipeline.py
k3s/: qdrant.yaml  rag-api.yaml
observability/: architecture.html  rag-dashboard.json
tests/: test_api.py
