[project]
name = "rag-devops-assistant"
version = "0.1.0"
description = "Production RAG system for DevOps documentation — observability-first with evaluation in CI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.41.0",
    "qdrant-client>=1.14.0",
    "sentence-transformers>=3.0.0",
    "openai>=2.24.0",
    "langchain-text-splitters>=0.3.0",
    "httpx>=0.28.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "ragas>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
